--- a/flip-bros/index.html
+++ b/flip-bros/index.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAF Games | Play Free Physics Platformer Game Online on GitHub.io</title>
-    <meta name="description" content="Play Flip Bros Unblocked, a free physics-based action platformer where you flip, jump, and stomp enemies. Enjoy this fun unblocked game instantly on GitHub.io..">
+    <title>Flip Bros Unblocked | Play Free Physics Platformer Game Online on GitHub.io</title>
+    <meta name="description" content="Play Flip Bros Unblocked, a free physics-based action platformer where you flip, jump, and stomp enemies. Enjoy this fun unblocked game instantly on GitHub.io.">
     <meta name="keywords" content="Flip Bros Unblocked, unblocked games, GitHub.io games, online platformer, physics game, free browser games, play at school, action games unblocked">
-    <link rel="canonical" href="https://onlyszgames.github.io/flip-bros" />
+    <link rel="canonical" href="https://fafgamess.github.io/flip-bros" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Flip Bros Unblocked ~» Jump, Flip, Stomp!" />
-    <meta property="og:description" content="Flip Bros Unblocked is a wild physics-based platformer. Control your 'Bro' and use a unique jump-and-flip mechanic to stomp on enemies and clear levels." />
-    <meta property="og:url" content="https://onlyszgames.github.io/flip-bros" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/flip-bros.png" />
+    <meta property="og:title" content="Flip Bros Unblocked | Play Free Physics Platformer Game Online on GitHub.io" />
+    <meta property="og:description" content="Play Flip Bros Unblocked, a free physics-based action platformer where you flip, jump, and stomp enemies. Enjoy this fun unblocked game instantly on GitHub.io." />
+    <meta property="og:url" content="https://fafgamess.github.io/flip-bros" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/flip-bros.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Flip Bros Unblocked ~» Jump, Flip, Stomp!">
-    <meta name="twitter:description" content="Flip Bros Unblocked is a wild physics-based platformer. Control your 'Bro' and use a unique jump-and-flip mechanic to stomp on enemies and clear levels.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/flip-bros.png">
+    <meta name="twitter:title" content="Flip Bros Unblocked | Play Free Physics Platformer Game Online on GitHub.io">
+    <meta name="twitter:description" content="Play Flip Bros Unblocked, a free physics-based action platformer where you flip, jump, and stomp enemies. Enjoy this fun unblocked game instantly on GitHub.io.">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/flip-bros.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Flip Bros",
-        "url": "https://onlyszgames.github.io/flip-bros",
-        "description": "Flip Bros Unblocked is a wild physics-based platformer. Control your 'Bro' and use a unique jump-and-flip mechanic to stomp on enemies and clear levels.",
+        "url": "https://fafgamess.github.io/flip-bros",
+        "description": "Play Flip Bros Unblocked, a free physics-based action platformer where you flip, jump, and stomp enemies. Enjoy this fun unblocked game instantly on GitHub.io.",
         "genre": "Skill",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/flip-bros.png"
+        "image": "https://fafgamess.github.io/img/flip-bros.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -450,7 +450,7 @@ justify-content: center;}
         </div>
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/flip-bros.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/flip-bros.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Flip Bros</div>
@@ -463,7 +463,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/flip-bros.png" alt="Flip Bros
+            <img src="https://fafgamess.github.io/img/flip-bros.png" alt="Flip Bros
 Gameplay" class="game-description-image" title="Flip Bros">
             <h2>🤸‍♂️ About Flip Bros</h2><p>Flip Bros is a creative and unconventional 2D platformer where your movement depends entirely on flips. Rather than traditional controls, your “Bro” somersaults through the level, bouncing off walls, floors, and enemies to survive. The goal in each stage is to defeat all enemies by landing precisely on their heads. This requires rhythm, patience, and a lot of practice but the feeling of finally clearing a tough level is worth it.
 Flip Bros Unblocked lets you enjoy the full game directly in your browser with no downloads, no ads, and no restrictions, even on school or work networks. It’s lightweight, runs smoothly on Chromebooks, PCs, and mobile browsers, and is one of the most fun GitHub.io unblocked games you can play today.
@@ -523,7 +523,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/speed-boat-extreme-racing" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/speed-boat-extreme-racing.png" alt="Speed Boat Extreme Racing A 3D Water Racer">
+                                <img src="https://fafgamess.github.io/img/speed-boat-extreme-racing.png" alt="Speed Boat Extreme Racing A 3D Water Racer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Speed Boat Extreme Racing A 3D Water Racer</h3>
@@ -534,7 +534,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/duck-life-4" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/duck-life-4.png" alt="Duck Life 4 Team Racing">
+                                <img src="https://fafgamess.github.io/img/duck-life-4.png" alt="Duck Life 4 Team Racing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Duck Life 4 Team Racing</h3>
@@ -545,7 +545,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/stickman-bike-pr" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-bike-pr.png" alt="Stickman Bike PR Master The Ride">
+                                <img src="https://fafgamess.github.io/img/stickman-bike-pr.png" alt="Stickman Bike PR Master The Ride">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Bike PR Master The Ride</h3>
@@ -556,7 +556,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/gunspin" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/gunspin.png" alt="Gunspin A Physics-Based Shooting Puzzle">
+                                <img src="https://fafgamess.github.io/img/gunspin.png" alt="Gunspin A Physics-Based Shooting Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Gunspin A Physics-Based Shooting Puzzle</h3>
@@ -567,7 +567,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/slope-2-multiplayer" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/slope-2-multiplayer.png" alt="Slope 2 Multiplayer">
+                                <img src="https://fafgamess.github.io/img/slope-2-multiplayer.png" alt="Slope 2 Multiplayer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Slope 2 Multiplayer</h3>
@@ -578,7 +578,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/rugby-rush" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/rugby-rush.png" alt="Rugby Rush A Fast-Paced Action Sport">
+                                <img src="https://fafgamess.github.io/img/rugby-rush.png" alt="Rugby Rush A Fast-Paced Action Sport">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Rugby Rush A Fast-Paced Action Sport</h3>
@@ -589,7 +589,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/flappy-bird" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/flappy-bird.png" alt="Flappy Bird">
+                                <img src="https://fafgamess.github.io/img/flappy-bird.png" alt="Flappy Bird">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Flappy Bird</h3>
@@ -600,7 +600,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/two-ball-3d-dark" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/two-ball-3d-dark.png" alt="Two Ball 3D Dark">
+                                <img src="https://fafgamess.github.io/img/two-ball-3d-dark.png" alt="Two Ball 3D Dark">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Two Ball 3D Dark</h3>
@@ -611,7 +611,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/blocky-cars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/blocky-cars.png" alt="Blocky Cars Online Combat">
+                                <img src="https://fafgamess.github.io/img/blocky-cars.png" alt="Blocky Cars Online Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Blocky Cars Online Combat</h3>
@@ -622,7 +622,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/unicycle-legend" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/unicycle-legend.png" alt="Unicycle Legend 2 Player">
+                                <img src="https://fafgamess.github.io/img/unicycle-legend.png" alt="Unicycle Legend 2 Player">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Unicycle Legend 2 Player</h3>
@@ -633,7 +633,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/descent" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/descent.png" alt="Descent A 3D Retro Space Shooter">
+                                <img src="https://fafgamess.github.io/img/descent.png" alt="Descent A 3D Retro Space Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Descent A 3D Retro Space Shooter</h3>
@@ -644,7 +644,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/tiny-fishing" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tiny-fishing.png" alt="Tiny Fishing">
+                                <img src="https://fafgamess.github.io/img/tiny-fishing.png" alt="Tiny Fishing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tiny Fishing</h3>
