--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAF Games | Flappy Bird Unblocked</title>
+    <title>Flappy Bird Unblocked | Play Unblocked Games</title>
     <meta name="description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
     <meta name="keywords" content="flappy bird, flappy bird unblocked, skill game, hard game, one-button game, pixel game, classic game">
     <link rel="canonical" href="https://fafgamess.github.io/flappy-bird" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="FAF Games | Flappy Bird Unblocked />
+    <meta property="og:title" content="Flappy Bird Unblocked | Play Unblocked Games />
     <meta property="og:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash! />
     <meta property="og:url" content="https://fafgamess.github.io/flappy-bird" />
     <meta property="og:image" content="https://fafgamess.github.io/img/flappy-bird.png" />
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="FAF Games | Flappy Bird Unblocked">
+    <meta name="twitter:title" content="Flappy Bird Unblocked | Play Unblocked Games">
     <meta name="twitter:description" content="Flappy Bird Unblocked is the famously difficult one-button arcade game. Tap to flap your bird's wings and navigate through a series of green pipes. Do not crash!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/flappy-bird.png">
     <link rel="icon" type="image/png" href="favicon.png">
