--- a/drift-boss/index.html
+++ b/drift-boss/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAF Games | Drift Boss Unblocked</title>
-    <meta name="description" content="Play Drift Boss Unblocked on FAF Games and test your drifting skills in this endless driving challenge. Tap to drift, avoid falling, and unlock new cars. Enjoy smooth gameplay on GitHub.io and other Unblocked Games no downloads required!">
+    <title>Drift Boss Unblocked | Play Unblocked Games</title>
+    <meta name="description" content="Drift Boss Unblocked on FAF Games and test your drifting skills in this endless driving challenge. Tap to drift, avoid falling, and unlock new cars. Enjoy smooth gameplay on GitHub.io and other Unblocked Games no downloads required!">
     <meta name="keywords" content="drift boss, driftboss, drift boss unblocked, unblocked games, github.io, faf games, drift boss online, play drift boss, drift boss unblocked game, drift boss faf games">
     <link rel="canonical" href="https://fafgamess.github.io/drift-boss" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="Drift Boss Unblocked ✦ One-Tap Skill" />
-    <meta property="og:description" content="Test your timing in Drift Boss Unblocked. This simple one-tap skill game challenges you to drift your car around endless, sharp corners. How long can you last?" />
+    <meta property="og:title" content="Drift Boss Unblocked | Play Unblocked Games" />
+    <meta property="og:description" content="Drift Boss Unblocked on FAF Games and test your drifting skills in this endless driving challenge. Tap to drift, avoid falling, and unlock new cars. Enjoy smooth gameplay on GitHub.io and other Unblocked Games no downloads required!" />
     <meta property="og:url" content="https://fafgamess.github.io/drift-boss" />
     <meta property="og:image" content="https://fafgamess.github.io/img/drift-boss.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Drift Boss Unblocked ✦ One-Tap Skill">
-    <meta name="twitter:description" content="Test your timing in Drift Boss Unblocked. This simple one-tap skill game challenges you to drift your car around endless, sharp corners. How long can you last?">
+    <meta name="twitter:title" content="Drift Boss Unblocked | Play Unblocked Games">
+    <meta name="twitter:description" content="Drift Boss Unblocked on FAF Games and test your drifting skills in this endless driving challenge. Tap to drift, avoid falling, and unlock new cars. Enjoy smooth gameplay on GitHub.io and other Unblocked Games no downloads required!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/drift-boss.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
@@ -27,7 +27,7 @@
         "@type": "Game",
         "name": "Drift Boss Master Play Drift Boss Unblocked Online",
         "url": "https://fafgamess.github.io/drift-boss",
-        "description": "Play Drift Boss Unblocked on FAF Games and test your drifting skills in this endless driving challenge. Tap to drift, avoid falling, and unlock new cars. Enjoy smooth gameplay on GitHub.io and other Unblocked Games no downloads required!",
+        "description": "Drift Boss Unblocked on FAF Games and test your drifting skills in this endless driving challenge. Tap to drift, avoid falling, and unlock new cars. Enjoy smooth gameplay on GitHub.io and other Unblocked Games no downloads required!",
         "genre": "Driving",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
