--- a/1v1-battle/index.html
+++ b/1v1-battle/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="1v1 battle, 1v1 battle unblocked, building game, shooter, multiplayer, strategy, unblocked games">
     <link rel="canonical" href="https://fafgamess.github.io/1v1-battle" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="1v1 Battle Unblocked | Play Free at FAF Games" />
     <meta property="og:description" content="Play 1v1 Battle Unblocked online free at FAF Games and Unblocked Games GitHub.io. Enjoy 1v1 LOL style action with shooting, building, and strategy right in your browser no downloads needed." />
     <meta property="og:url" content="https://fafgamess.github.io/1v1-battle" />
     <meta property="og:image" content="https://fafgamess.github.io/img/1v1-battle.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@FAFGames">
     <meta name="twitter:title" content="1v1 Battle Unblocked | Play Free at FAF Games">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -719,7 +719,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
